# keystroke-recognition-api

./: .gitignore  celery_worker.py  configs.py  constants.py  main.py  pyproject.toml
data/: 2ff93053-b8e0-4953-aaac-98af2cef8cc1.json  3831a4a0-1671-4d79-8594-7d8ab5858bc1.24a9bab4-8228-4b36-aa7f-56b802cdfd9c.json  3831a4a0-1671-4d79-8594-7d8ab5858bc1.2ebfea7f-ba70-4222-b4aa-ed7a416f0698.json  3831a4a0-1671-4d79-8594-7d8ab5858bc1.b9e8f679-611f-4ddb-90af-f0a0fe2a3717.json  3831a4a0-1671-4d79-8594-7d8ab5858bc1.ed12b19a-bb91-4f20-aafd-1f2dc3a662ce.json  58da4fb0-d2f6-4a17-9bd1-e302ac5ef767.1e8824b0-de17-4800-888d-22a8f96f5db1.json  83990d67-2bb6-45e7-a5c3-01fcf687d6c3.0bed528c-7200-44e7-a643-f12e14fdfffc.json  83990d67-2bb6-45e7-a5c3-01fcf687d6c3.3034aeaa-46fe-45d4-be99-ddab301c40bf.json  83990d67-2bb6-45e7-a5c3-01fcf687d6c3.ad4131bb-3be0-4358-8e9b-dd6381fed1ee.json  83990d67-2bb6-45e7-a5c3-01fcf687d6c3.b9ce8692-39e0-4729-80f0-58d31d2f0b9d.json  83990d67-2bb6-45e7-a5c3-01fcf687d6c3.d749a624-44fd-4d44-9d4f-021a4a8b4ef1.json  83990d67-2bb6-45e7-a5c3-01fcf687d6c3.f84105ea-d2bb-4017-bd73-3aa0ab159a94.json  93d28125-403c-4657-a3a5-85b18ec69ce8.json  963d9a7e-5f3f-4123-969c-2a28c0222a8e.json  9a06c5b5-592e-4052-8854-6f92659d6e4b.a7a38f9c-ee5d-445d-b656-c919d852d91a.json  9a06c5b5-592e-4052-8854-6f92659d6e4b.json  9dd60d97-2ba0-4f8d-a9b4-eb7da4b6cce8.1b2d1679-0b22-4e16-bb4b-66f2a8e47584.json  all_users_dataset.csv  bfa97514-7cce-4ba2-aa83-c80f8c41370b.c3daf4cf-22ea-49ac-a233-4a3c5d456e4f.json
db/: mongo.py
dependencies/: auth.py
experiments/: alto-experiment.ipynb  (+3 more)
(+23 files in other folders)
